--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,20 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="lib/junit-dep-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/drools-core-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/knowledge-api-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-compiler-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-decisiontables-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/drools-jsr94-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/mvel2-2.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jdt.core_3.4.4.v_894_R34x.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-3.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-runtime-3.3.jar"/>
+	<classpathentry kind="lib" path="lib/knowledge-internal-api-5.5.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
